[tool.poetry]
name = "pygithub"
version = "0.1.0"
description = ""
authors = ["ab22375 <ab22375@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.0.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
